deploy/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ocp-audit-postgres
  namespace: ocp-audit
spec:
  clusterIP: None
  selector: {app: ocp-audit-agent, component: postgres}
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
