deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ocp-audit-agent
  namespace: ocp-audit
spec:
  type: ClusterIP
  selector: {app: ocp-audit-agent, component: server}
  ports:
  - name: http
    port: 8080
    targetPort: 8080
